create supllier and product

--- a/src/main/resources/templates/admin/add.html
+++ b/src/main/resources/templates/admin/add.html
@@ -106,68 +106,7 @@
                                                             </select>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-3"><a href="">Add employee</a></div>
-<!--                                                    <div class="col-lg-6">-->
-<!--                                                        <p>-->
-<!--                                                            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">-->
-<!--                                                                Add employee-->
-<!--                                                            </a>-->
-<!--                                                        </p>-->
-<!--                                                        <div class="collapse" id="collapseExample">-->
-<!--                                                            <div class="card card-body">-->
-<!--                                                                <div class="form-group-inner">-->
-<!--                                                                    <div class="row">-->
-<!--                                                                        <div class="col-lg-3">-->
-<!--                                                                            <label class="login2 pull-right pull-right-pro">Full Name</label>-->
-<!--                                                                        </div>-->
-<!--                                                                        <div class="col-lg-9">-->
-<!--                                                                            <input type="text" id="Ename"  class="form-control" name="Ename" />-->
-<!--                                                                        </div>-->
-<!--                                                                    </div>-->
-<!--                                                                </div>-->
-<!--                                                                <div class="form-group-inner">-->
-<!--                                                                    <div class="row">-->
-<!--                                                                        <div class="col-lg-3">-->
-<!--                                                                            <label class="login2 pull-right pull-right-pro">Phone</label>-->
-<!--                                                                        </div>-->
-<!--                                                                        <div class="col-lg-9">-->
-<!--                                                                            <input type="text" id="phone"  class="form-control" name="phone" />-->
-<!--                                                                        </div>-->
-<!--                                                                    </div>-->
-<!--                                                                </div>-->
-<!--                                                                <div class="form-group-inner">-->
-<!--                                                                    <div class="row">-->
-<!--                                                                        <div class="col-lg-3">-->
-<!--                                                                            <label class="login2 pull-right pull-right-pro">CMND</label>-->
-<!--                                                                        </div>-->
-<!--                                                                        <div class="col-lg-9">-->
-<!--                                                                            <input type="text" id="cmnd"  class="form-control" name="cmnd" />-->
-<!--                                                                        </div>-->
-<!--                                                                    </div>-->
-<!--                                                                </div>-->
-<!--                                                                <div class="form-group-inner">-->
-<!--                                                                    <div class="row">-->
-<!--                                                                        <div class="col-lg-3">-->
-<!--                                                                            <label class="login2 pull-right pull-right-pro">Địa chỉ</label>-->
-<!--                                                                        </div>-->
-<!--                                                                        <div class="col-lg-9">-->
-<!--                                                                            <input type="text" id="address"  class="form-control" name="address" />-->
-<!--                                                                        </div>-->
-<!--                                                                    </div>-->
-<!--                                                                </div>-->
-<!--                                                                <div class="form-group-inner">-->
-<!--                                                                    <div class="row">-->
-<!--                                                                        <div class="col-lg-3">-->
-<!--                                                                            <label class="login2 pull-right pull-right-pro">Ngày sinh </label>-->
-<!--                                                                        </div>-->
-<!--                                                                        <div class="col-lg-9">-->
-<!--                                                                            <input type="date" id="birthday"  class="form-control" name="birthday" />-->
-<!--                                                                        </div>-->
-<!--                                                                    </div>-->
-<!--                                                                </div>-->
-<!--                                                            </div>-->
-<!--                                                        </div>-->
-<!--                                                    </div>-->
+                                                    <div class="col-lg-3"><a th:href="@{/admin/employee/add.html}">Add employee</a></div>
                                                 </div>
                                             </div>
 
