--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -107,7 +107,7 @@
                                                             </select>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-3"><a href="">Add employee</a></div>
+                                                    <div class="col-lg-3"><a th:href="@{/admin/employee/add.html}">Add employee</a></div>
                                                 </div>
                                             </div>
 
