--- a/src/main/resources/templates/product/add.html
+++ b/src/main/resources/templates/product/add.html
@@ -44,6 +44,17 @@
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
+                                                        <label class="login2 pull-right pull-right-pro">Code</label>
+                                                    </div>
+                                                    <div class="col-lg-9">
+                                                        <input type="text" id="code" th:field="*{code}" class="form-control" name="code" />
+                                                        <span th:if="${#fields.hasErrors('code')}" th:errors="*{code}" class="badge badge-danger left"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group-inner">
+                                                <div class="row">
+                                                    <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">Price</label>
                                                     </div>
                                                     <div class="col-lg-9">
@@ -55,11 +66,33 @@
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
+                                                        <label class="login2 pull-right pull-right-pro">Sale Price</label>
+                                                    </div>
+                                                    <div class="col-lg-9">
+                                                        <input type="text" id="salePrice" th:field="*{salePrice}" class="form-control" name="price" />
+                                                        <span th:if="${#fields.hasErrors('salePrice')}" th:errors="*{salePrice}" class="badge badge-danger left"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group-inner">
+                                                <div class="row">
+                                                    <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">Amount total</label>
                                                     </div>
                                                     <div class="col-lg-9">
                                                         <input type="text" id="amountTotal" th:field="*{amountTotal}" class="form-control" name="amountTotal" />
                                                         <span th:if="${#fields.hasErrors('amountTotal')}" th:errors="*{amountTotal}" class="badge badge-danger left"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group-inner">
+                                                <div class="row">
+                                                    <div class="col-lg-3">
+                                                        <label class="login2 pull-right pull-right-pro">Size</label>
+                                                    </div>
+                                                    <div class="col-lg-9">
+                                                        <input type="text" id="size" th:field="*{sizeProduct}" class="form-control" name="amountTotal" />
+                                                        <span th:if="${#fields.hasErrors('sizeProduct')}" th:errors="*{sizeProduct}" class="badge badge-danger left"></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -135,6 +168,21 @@
                                                             <select class="form-control custom-select-value" name="account" th:field="*{status}">
                                                                 <option value="0">Active</option>
                                                                 <option value="1">Not Active</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group-inner">
+                                                <div class="row">
+                                                    <div class="col-lg-3">
+                                                        <label class="login2 pull-right pull-right-pro">Sex</label>
+                                                    </div>
+                                                    <div class="col-lg-9">
+                                                        <div class="form-select-list">
+                                                            <select class="form-control custom-select-value" name="account" th:field="*{sex}">
+                                                                <option value="0">female</option>
+                                                                <option value="1">male</option>
                                                             </select>
                                                         </div>
                                                     </div>
